--- a/ti92app/ti92app.csproj
+++ b/ti92app/ti92app.csproj
@@ -81,6 +81,9 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmLogin.resx">
+      <DependentUpon>FrmLogin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmPrincipal.resx">
       <DependentUpon>FrmPrincipal.cs</DependentUpon>
     </EmbeddedResource>
@@ -138,6 +141,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Cancel.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\User Info.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\User Info1.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\security.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Rectangle Green.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
